# kusratch30_11

./: pyproject.toml
kusratch30_11/: dump.csv  functions.py  main.py  stocks_archive_5years.zip.yaml
