[tool.poetry]
name = "kusratch30-11"
version = "0.1.0"
description = ""
authors = ["dichenk <dchenk@gmail.com>"]
readme = "README.md"
packages = [{include = "kusratch30_11"}]

[tool.poetry.dependencies]
python = "^3.8"
vaex = "^4.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nice_sort = 'kusratch30_11.main:main'
